# fastApi-boilerplate

./: README.md  main.py  pyproject.toml
