[tool.poetry]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "fastest api"
authors = ["Hung Vu <vunamhung@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pydantic = "^2.3.0"

[tool.black]
line-length = 152
target-version = ['py311']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
